completed with employee section, project section and also added assign project

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -594,6 +594,11 @@
     "/fonts/font-awesome/webfonts/fa-solid-900.ttf": "/fonts/font-awesome/webfonts/fa-solid-900.ttf",
     "/fonts/font-awesome/webfonts/fa-solid-900.woff": "/fonts/font-awesome/webfonts/fa-solid-900.woff",
     "/fonts/font-awesome/webfonts/fa-solid-900.woff2": "/fonts/font-awesome/webfonts/fa-solid-900.woff2",
+    "/images/employees/img-41ca774f842ba032fe16cae747a52c4304fb493133.jpg": "/images/employees/img-41ca774f842ba032fe16cae747a52c4304fb493133.jpg",
+    "/images/employees/img-555d6cac8d064f2e141d311ddc8af8e7f0584017c12.jpg": "/images/employees/img-555d6cac8d064f2e141d311ddc8af8e7f0584017c12.jpg",
+    "/images/employees/img-9872ea5b95f7a7196a84feda47f05bf6c00af53b3ed.jpg": "/images/employees/img-9872ea5b95f7a7196a84feda47f05bf6c00af53b3ed.jpg",
+    "/images/img-34366303ea0aefda230f81261c5a10be46b452ca60.jpg": "/images/img-34366303ea0aefda230f81261c5a10be46b452ca60.jpg",
+    "/images/img-6082f0f5b13f3ebbc704db9160b6a761a930b6bf5b9.jpg": "/images/img-6082f0f5b13f3ebbc704db9160b6a761a930b6bf5b9.jpg",
     "/images/logo/favicon.ico": "/images/logo/favicon.ico",
     "/images/logo/logo.png": "/images/logo/logo.png",
     "/images/placeholder.jpg": "/images/placeholder.jpg",
